reorganized some files, rewrote sinoper-v2/index.md to speak more directly towards key points, and fixed the 'under construction' banner's behavior on small screens.
left to do:
- write a lot of content

--- a/docs/_sass/_default.scss
+++ b/docs/_sass/_default.scss
@@ -463,7 +463,7 @@ body {
 
   .under-construction {
     padding: 9px;
-    position: absolute;
+    position: relative;
     background-color: $bg-2;
     border: 3px solid $bg-3;
     transform: rotate(-1deg);
@@ -503,7 +503,8 @@ body {
   }
 
   h1 {
-    margin: 0;
+    margin: 0 0 -4px 0;
+    font-size: $text-size-2*1.7;
 
     &:target {
       color: $bg-1;
@@ -513,7 +514,7 @@ body {
       margin-right: 9px;
 
       i.fas {
-        font-size: 27px;
+        font-size: $text-size-2*1.5;
         margin: auto;
         color: $bg-3;
 
@@ -535,7 +536,7 @@ body {
   hr {
     color: transparent;
     border: 1px solid $bg-3;
-    margin: 24px 0 16px;
+    margin: 20px 0 12px;
   }
 
   // layout arrangement for code blocks
@@ -573,12 +574,13 @@ body {
   // the title strip at the top of the document, as well as the github icon on the right.
   #title {
     padding: 12px 0 12px 16px;
+    margin-bottom: 16px;
     width: 100%;
     border: none;
     border-bottom: 3px solid $bg-3;
     outline: none;
     text-align: left;
-    font-size: $text-size-2*1.5;
+    font-size: $text-size-2*2;
     $title-color: $acc-2 !default;
     color: $title-color;
     font-weight: bold;
